# My-Recommender

./: README.md  pyproject.toml
notebooks/: demo.ipynb
src/my_recommender/api/: api.py
src/my_recommender/data/: loader.py
src/my_recommender/ml/: recommender.py
src/my_recommender/models/: models.py
