[project]
name = "my-recommender"
version = "0.1.0"
description = ""
authors = [
    {name = "shvhmgurung",email = ""}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "my_recommender", from = "src"}]


[tool.poetry.group.dev.dependencies]
notebook = "^7.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
