[project]
name = "my-recommender"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic (>=2.11.5,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "my_recommender", from = "src"}]


[tool.poetry.group.dev.dependencies]
notebook = "^7.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
